# VSB

./: .gitignore  README.md  pyproject.toml  vsb.py
.github/actions/create-pinecone-index/: action.yml
.github/actions/delete-pinecone-index/: action.yml
.github/scripts/: cleanup_pinecone_project.py
.github/workflows/: black.yml  python-package.yml
docker/opensearch/: docker-compose.yml
docker/pgvector/: docker-compose.yml
docker/solr/: docker-compose.yml
docker/solr/docker/solr/configsets/_default/conf/: solrconfig.xml
scripts/: rewrite_parquet_file_split.py
tests/benchmark/: test_benchmark_parquet.py
tests/integration/: conftest.py  test_common.py  test_opensearch.py  test_pgvector.py  test_pinecone.py  test_solr.py
tests/unit/: test_dataset.py  test_filter_util.py  test_metrics.py  test_parquet_workload.py  test_randomized_pacer.py  test_synthetic_workload.py
vsb/: __init__.py  cmdline_args.py  locker.py  locustfile.py  logging.py  main.py  metrics.py  metrics_tracker.py  randomized_pacer.py  subscriber.py  users.py  vsb.py  vsb_types.py
vsb/databases/: __init__.py  base.py
vsb/databases/opensearch/: README.md  opensearch.py
vsb/databases/pgvector/: README.md  filter_util.py  pgvector.py
vsb/databases/pinecone/: README.md  pinecone.py
vsb/databases/qdrant/: qdrant.py
vsb/databases/s3vectors/: s3vectors.py
vsb/databases/solr/: README.md  solr.py
vsb/databases/turbopuffer/: tubropuffer.py
vsb/utils/: convert_parquet.py  import.py
vsb/workloads/: __init__.py  base.py  dataset.py
vsb/workloads/at_scale_poc/: at_scale_poc.py
vsb/workloads/cohere_768/: cohere_768.py
vsb/workloads/mnist/: mnist.py
vsb/workloads/msmarco_v2_ada/: msmarco_v2_ada.py
vsb/workloads/nq_768_tasb/: nq_768_tasb.py
vsb/workloads/parquet_workload/: parquet_workload.py
vsb/workloads/synthetic_workload/: synthetic_workload.py
vsb/workloads/unittest/: unittest.py
vsb/workloads/yfcc/: yfcc.py
