[tool.poetry]
name = "VSB"
version = "0.1.0"
description = "A vector search benchmarking suite, built on the Locust framework"
authors = ["Pinecone Systems, Inc. <support@pinecone.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
locust = "^2.29.1"
pandas = "^2.2.1"
google-cloud-storage = "^2.18.1"
grpcio = "^1.65.1"
pyarrow = "^17.0.0"
pinecone-client = {version = "^5.0", extras = ["grpc"]}
tabulate = "^0.9.0"
pydantic = "^2.8.2"
locust-plugins = "^4.5.1"
pgvector = "^0.3.2"
psycopg = "^3.2.1"
hdrhistogram = "^0.10.3"
tenacity = "^9.0.0"
rich = "^13.7.1"

[tool.poetry.scripts]
vsb = "vsb.main:main"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.3.2"
flake8 = "^7.1.0"
pre-commit = "^3.8.0"
pytest-benchmark = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
