[tool.poetry]
name = "VSB"
version = "0.1.0"
description = "A vector search benchmarking suite, built on the Locust framework"
authors = ["Pinecone Systems, Inc. <support@pinecone.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
locust = "^2.32.3"
pandas = "^2.2.3"
google-cloud-storage = "^2.18.2"
grpcio = "^1.66.1"
pyarrow = "^17.0.0"
pinecone = {version = "^5.0", extras = ["grpc"]}
tabulate = "^0.9.0"
pydantic = "^2.9.1"
locust-plugins = "^4.5.3"
pgvector = "^0.3.6"
psycopg = "^3.2.3"
hdrhistogram = "^0.10.3"
tenacity = "^9.0.0"
rich = "^13.8.1"
filelock = "^3.16.0"

[tool.poetry.scripts]
vsb = "vsb.main:main"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.3.3"
flake8 = "^7.1.1"
pre-commit = "^3.8.0"
pytest-benchmark = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
