[tool.black]
# NOTE: When updating this version, also update `tool.poetry.group.dev.dependencies`.
required-version = "24.4.2"

[tool.poetry]
name = "VSB"
version = "0.1.0"
description = "A vector search benchmarking suite, built on the Locust framework"
authors = ["Pinecone Systems, Inc. <support@pinecone.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
locust = "^2.34.0"
pandas = "^2.2.3"
google-cloud-storage = "^3.1.0"
grpcio = "^1.71"
pyarrow = "^18.0.0"
pinecone = {version = "^6.0", extras = ["grpc"]}
tabulate = "^0.9.0"
pydantic = "^2.11.3"
locust-plugins = "^4.5.3"
pgvector = "^0.3.6"
psycopg = "^3.2.6"
hdrhistogram = "^0.10.3"
tenacity = "^9.0.0"
rich = "^13.8.1"
filelock = "^3.18.0"

[tool.poetry.scripts]
vsb = "vsb.main:main"

[tool.poetry.group.dev.dependencies]
# NOTE: When updating this version, also update `tool.black.required-version`.
black = "=24.4.2"
pytest = "^8.3.3"
flake8 = "^7.2.0"
pre-commit = "^4.2.0"
pytest-benchmark = "^5.1.0"
pytest-timeout = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
